# Equinox

./: # venv.txt  .gitignore  LICENSE  README.md  _cross_check.py  _main_names.txt  _scan_main.py  check_ids3.py  command_stats.json  discloud.config  find_secrets.py  guild_config.json  handoff.md  lifetimecode.json  main (2).py  main.py  main_no_comments.py  monthcode.json  opencode.json  presence_privacy.json  privacy_settings.json  pyproject.toml  reaction_roles.json  reactionroles.json  requirements.txt  scam_actions.json  scam_feedback.jsonl  state.py  userinventory.json  verify_system.json  yearly_user.json  yearlycode.json
.github/workflows/: ci.yml
autoping_data/: autoping_1370026636182818927.json
autorole_data/: autorole_1370026636182818927.json
cogs/: automation.py  database.py  events.py  gacha.py  giveaway.py  giveaway_views.py  moderation.py  premium.py  presence.py  reaction_roles.py  security.py  ticket_views.py  tickets.py  utility.py  verification.py  views.py
giveawayFolder/: giveaways_1237992285447393351.json
messageCounterData/: messagecounter_1237992285447393351.json  messagecounter_1370026636182818927.json
scripts/: _cross_check.py  _scan_main.py  check_ids.py  test.py  test_imports.py
tests/: test_state.py
ticket-json/: 1237992285447393351-ticket.json  ticket-server.json
