[project]
name = "equinox-bot"
version = "1.0.0"
description = "Multi-purpose Discord bot"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
strict_optional = true
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
